fixing heading spacing

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -27,6 +27,7 @@
 }
 
 .neon-purple {
+  margin-top: 8rem;
   text-transform: uppercase;
   color: var.$primary;
   line-height: 6vw;
