--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -1,6 +1,6 @@
 .projects {
   // padding: 4.8rem 0 8.4rem;
-  padding: 8.4rem 0 0 -1rem;
+  padding: 8.4rem 0 -1rem;
   position: relative;
   width: 100%;
   background: url("../imgs/whitepaint.jpg") center/cover no-repeat fixed;
